vim (2:7.4.000-1) UNRELEASED; urgency=low

  * New upstream release.
  * Upload to unstable.
  * Stop providing /usr/share/vim/vimcurrent.  It shouldn't be used by
    anything, since it's Debian specific, and the Vim packaging hasn't used it
    (other than documenting the location of debian.vim) for years.

 -- James McCoy <jamessan@debian.org>  Sat, 03 Aug 2013 23:53:06 -0400

vim (2:7.4b.004-1) experimental; urgency=low

  * Merge upstream tag v7-4b-004
    + 7.4a.044: Clear window from b_wininfo in win_free().  (Closes: #717529)
  * debian/rules: Install Japanese translations of man pages.
  * Update path in binaries-have-file-conflict lintian override.
  * Use canonical URI for Vcs-*.

 -- James McCoy <jamessan@debian.org>  Fri, 02 Aug 2013 22:58:04 -0400

vim (2:7.4a.012-1) experimental; urgency=low

  * Merge upstream tag v7-4a-012
    + New NFA regex engine.  Vim automatically determines whether to use the
      new or old engine based on the pattern.  A specific engine can be
      forced with the 'regexengine' option or within a pattern using the \%#=
      atom.
    + Updated Perl syntax files
      - Adds support for Perl 5.10 syntax.  (Closes: #681606)
      - Fixes syntax highlighting when qq{} contains a } character.  (Closes:
        #598197)
    + Fix display of an empty entry in NetRW directory listing.  (Closes:
      #709101)
    + Recognize Ikiwiki's *.mdwn as markdown filetype.  (Closes: #672597)
    + 7.3.985: Call g_set_prgname() on startup to set a proper WM_CLASS.
      (Closes: #639925)
    + Source ~/.vim/vimrc or ~/.vim/gvimrc in favor of ~/.vimrc or ~/.gvimrc.
    + Update sh syntax file
      - Recognize when sh is dash and change the default behavior highlighting
        to be POSIX instead of Bourne.  (Closes: #712657, #699172)
      - Correctly highlight text after a "--".  (Closes: #713922)
  * debian/rules: Simplify version handling and bump for the pre-release.